--- a/gulimall-third-party/gulimall-third-party-biz/src/main/resources/application.yml
+++ b/gulimall-third-party/gulimall-third-party-biz/src/main/resources/application.yml
@@ -18,5 +18,12 @@
 #    nacos:
 #      discovery:
 #        server-addr: 127.0.0.1:8848
+#  redis:
+#    port: 6379
+#    host: 192.168.52.128
+#  session:
+#    store-type: redis
+#
+#
 #server:
 #  port: 10007
