--- a/gulimall-ware/gulimall-ware-biz/src/main/resources/application.yml
+++ b/gulimall-ware/gulimall-ware-biz/src/main/resources/application.yml
@@ -1,23 +1,29 @@
-#spring:
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
 #    url: jdbc:mysql://10.211.55.20:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-##    url: jdbc:mysql://192.168.11.128:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-#    username: root
-#    password: root
-#  application:
-#    name: gulimall-ware
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
-#  jackson:
-#    date-format: yyyy-MM-dd HH:mm:ss
-#
-#mybatis-plus:
-#  mapper-locations: classpath*:/mapper/**/*.xml
-#  global-config:
-#    db-config:
-#      id-type: auto
-#server:
-#  port: 10008
+    url: jdbc:mysql://192.168.52.128:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: root
+  application:
+    name: gulimall-ware
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+  redis:
+    host: 192.168.52.128
+    port: 6379
+  session:
+    store-type: redis
+
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*.xml
+  global-config:
+    db-config:
+      id-type: auto
+server:
+  port: 10008
+
