--- a/gulimall-ware/gulimall-ware-biz/src/main/resources/application.yml
+++ b/gulimall-ware/gulimall-ware-biz/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
     port: 6379
   session:
     store-type: redis
+  rabbitmq:
+    host:  192.168.52.128
+    virtual-host: /
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
