--- a/gulimall-member/gulimall-member-biz/pom.xml
+++ b/gulimall-member/gulimall-member-biz/pom.xml
@@ -37,6 +37,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.order</groupId>
+            <artifactId>gulimall-order-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
